[gd_scene load_steps=34 format=3 uid="uid://ns0j27nxdcqc"]

[ext_resource type="Script" uid="uid://bln6vhy35gxta" path="res://Policia/policia.gd" id="1_252ev"]
[ext_resource type="Texture2D" uid="uid://fhw77cw5qh3t" path="res://Images/police_1.png" id="2_yiqhh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xxcha"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l1g8l"]
atlas = ExtResource("2_yiqhh")
region = Rect2(288, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_coiq3"]
atlas = ExtResource("2_yiqhh")
region = Rect2(304, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2rmkr"]
atlas = ExtResource("2_yiqhh")
region = Rect2(320, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6gy1b"]
atlas = ExtResource("2_yiqhh")
region = Rect2(336, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6sfpq"]
atlas = ExtResource("2_yiqhh")
region = Rect2(352, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1ht1"]
atlas = ExtResource("2_yiqhh")
region = Rect2(368, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k21r0"]
atlas = ExtResource("2_yiqhh")
region = Rect2(288, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_27n6p"]
atlas = ExtResource("2_yiqhh")
region = Rect2(272, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4dx7"]
atlas = ExtResource("2_yiqhh")
region = Rect2(80, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfibs"]
atlas = ExtResource("2_yiqhh")
region = Rect2(176, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1wjd6"]
atlas = ExtResource("2_yiqhh")
region = Rect2(192, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktnc8"]
atlas = ExtResource("2_yiqhh")
region = Rect2(208, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_prisu"]
atlas = ExtResource("2_yiqhh")
region = Rect2(224, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2eks"]
atlas = ExtResource("2_yiqhh")
region = Rect2(240, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yocw1"]
atlas = ExtResource("2_yiqhh")
region = Rect2(256, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_18mu2"]
atlas = ExtResource("2_yiqhh")
region = Rect2(272, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1v8d6"]
atlas = ExtResource("2_yiqhh")
region = Rect2(0, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7knf"]
atlas = ExtResource("2_yiqhh")
region = Rect2(16, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p583m"]
atlas = ExtResource("2_yiqhh")
region = Rect2(32, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e406d"]
atlas = ExtResource("2_yiqhh")
region = Rect2(48, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s06ol"]
atlas = ExtResource("2_yiqhh")
region = Rect2(64, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_34s0f"]
atlas = ExtResource("2_yiqhh")
region = Rect2(80, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h28e6"]
atlas = ExtResource("2_yiqhh")
region = Rect2(96, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0gm3"]
atlas = ExtResource("2_yiqhh")
region = Rect2(112, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3gv5"]
atlas = ExtResource("2_yiqhh")
region = Rect2(128, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qu5tb"]
atlas = ExtResource("2_yiqhh")
region = Rect2(144, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jtvdl"]
atlas = ExtResource("2_yiqhh")
region = Rect2(160, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_di3an"]
atlas = ExtResource("2_yiqhh")
region = Rect2(176, 64, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_apmd2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1g8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_coiq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2rmkr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6gy1b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6sfpq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1ht1")
}],
"loop": true,
"name": &"DOWN",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k21r0")
}],
"loop": true,
"name": &"IDLE_DOWN",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_27n6p")
}],
"loop": true,
"name": &"IDLE_LEFT",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4dx7")
}],
"loop": true,
"name": &"IDLE_RIGHT",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfibs")
}],
"loop": true,
"name": &"IDLE_UP",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wjd6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktnc8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_prisu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2eks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yocw1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18mu2")
}],
"loop": true,
"name": &"LEFT",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1v8d6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7knf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p583m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e406d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s06ol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34s0f")
}],
"loop": true,
"name": &"RIGHT",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h28e6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0gm3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3gv5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qu5tb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jtvdl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_di3an")
}],
"loop": true,
"name": &"UP",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_252ev"]
radius = 7.1002536

[node name="Policia" type="CharacterBody2D"]
script = ExtResource("1_252ev")
patrol_point_a = Vector2(300, 0)
patrol_point_b = Vector2(-100, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_xxcha")

[node name="VisionCone" type="Polygon2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_apmd2")
animation = &"IDLE_DOWN"

[node name="WanderTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="DetectionRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRadius"]
scale = Vector2(50, 50)
shape = SubResource("CircleShape2D_252ev")

[node name="LineOfSight" type="RayCast2D" parent="."]

[node name="WaitTimerPatrol" type="Timer" parent="."]
process_callback = 0
one_shot = true

[connection signal="timeout" from="WanderTimer" to="." method="pick_new_direction"]
[connection signal="timeout" from="WaitTimerPatrol" to="." method="_on_wait_timer_patrol_timeout"]
